# ncs-nrf5-cam-tl-controller

./: CMakeLists.txt  README.rst  prj.conf
boards/: nrf52840dk_nrf52840.overlay  nrf52840dongle_nrf52840.overlay  nrf52dk_nrf52832.overlay
include/: cam_tl_control.h
src/: app_settings.h  cam_tl_control.c  flash_handler.c  flash_handler.h  main.c
